--- a/XpandTest6/Views/Accounts/Register.cshtml
+++ b/XpandTest6/Views/Accounts/Register.cshtml
@@ -1,5 +1,5 @@
 ﻿@model XpandTest6.ViewModels.RegisterViewModel
-<h2>Регистрация нового пользователя</h2>
+<h2>Add New User</h2>
 <form method="post" asp-controller="Account" asp-action="Register">
     <div asp-validation-summary="ModelOnly"></div>
     <div>
@@ -18,6 +18,6 @@
         <span asp-validation-for="PasswordConfirm"></span>
     </div>
     <div>
-        <input type="submit" class="btn continue btn-block" value="Регистрация" />
+        <input type="submit" class="btn continue btn-block" value="Continue" />
     </div>
 </form>
