--- a/XpandTest6/Views/Accounts/Register.cshtml
+++ b/XpandTest6/Views/Accounts/Register.cshtml
@@ -9,15 +9,20 @@
     </div>
     <div>
         <label asp-for="Password"></label><br />
-        <input asp-for="Password" class="form-control"/>
+        <input asp-for="Password" class="form-control" />
         <span asp-validation-for="Password"></span>
     </div>
     <div>
         <label asp-for="PasswordConfirm"></label><br />
-        <input asp-for="PasswordConfirm" class="form-control"/>
+        <input asp-for="PasswordConfirm" class="form-control" />
         <span asp-validation-for="PasswordConfirm"></span>
     </div>
     <div>
         <input type="submit" class="btn continue btn-block" value="Continue" />
     </div>
 </form>
+
+<br />
+<a href="#" class="btn facebook btn-block" role="button">Sign In With Facebook</a>
+<br />
+<a href="#" class="btn twitter btn-block" role="button">Sign In With Twitter</a>
