--- a/XpandTest6/Views/Accounts/Register.cshtml
+++ b/XpandTest6/Views/Accounts/Register.cshtml
@@ -26,3 +26,6 @@
 <a href="#" class="btn facebook btn-block" role="button">Sign In With Facebook</a>
 <br />
 <a href="#" class="btn twitter btn-block" role="button">Sign In With Twitter</a>
+
+<br />
+<a asp-controller="Accounts" asp-action="Login">Sign</a>
