Add email to confirmation

--- a/XpandTest6/Views/Accounts/Register.cshtml
+++ b/XpandTest6/Views/Accounts/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@model XpandTest6.ViewModels.RegisterViewModel
 <h2>Add New User</h2>
-<form method="post" asp-controller="Account" asp-action="Register">
+<form method="post" asp-controller="Accounts" asp-action="Register">
     <div asp-validation-summary="ModelOnly"></div>
     <div>
         <label asp-for="Email"></label><br />
