--- a/XpandTest6/Views/Home/Index.cshtml
+++ b/XpandTest6/Views/Home/Index.cshtml
@@ -2,7 +2,17 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+
+@if (User.Identity.IsAuthenticated)
+{
+    <p>User Email:</p>
+    <h5>@User.Identity.Name</h5>
+    <form method="post" asp-controller="Account" asp-action="LogOff">
+        <input type="submit" class="btn continue btn-block" value="Logout" />
+    </form>
+}
+else
+{
+    <a asp-controller="Account" asp-action="Login">Sign In</a>
+    <a asp-controller="Account" asp-action="Register">Sign Up</a>
+}
