--- a/XpandTest6/Views/Home/Index.cshtml
+++ b/XpandTest6/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 {
     <p>User Email:</p>
     <h5>@User.Identity.Name</h5>
-    <form method="post" asp-controller="Account" asp-action="LogOff">
+    <form method="post" asp-controller="Accounts" asp-action="LogOff">
         <input type="submit" class="btn continue btn-block" value="Logout" />
     </form>
 }
