--- a/XpandTest6/Views/Accounts/EmailConfirm.cshtml
+++ b/XpandTest6/Views/Accounts/EmailConfirm.cshtml
@@ -1,13 +1,13 @@
 ﻿@model XpandTest6.Models.EmailConfirm
 
 @{
-    ViewData["Title"] = "Сбросить пароль";
+    ViewData["Title"] = "Confirmation of registration";
 }
 
 <h2>@ViewData["Title"]</h2>
 <p>
-    Для сброса пароля перейдите по ссылке в письме, отправленном на ваш email.
+    To confirm, follow the link in the letter sent to your email
     <br />
-    <a href=@ViewData["Link"]>Ссилка яка відправлена на Email для скидання паролю</a>
-    
+    <a href=@ViewData["Link"]>Link sent to Email for confirmation</a>
+
 </p>
