--- a/XpandTest6/Views/Accounts/Register.cshtml
+++ b/XpandTest6/Views/Accounts/Register.cshtml
@@ -28,4 +28,4 @@
 <a href="#" class="btn twitter btn-block" role="button">Sign In With Twitter</a>
 
 <br />
-<a asp-controller="Accounts" asp-action="Login">Sign</a>
+<a asp-controller="Accounts" asp-action="Login">Sign In</a>
