--- a/XpandTest6/Views/Accounts/Login.cshtml
+++ b/XpandTest6/Views/Accounts/Login.cshtml
@@ -15,7 +15,7 @@
         <span asp-validation-for="Password"></span>
     </div>
     <div>
-        <input type="submit" class="btn continue btn-block" value="Войти" />
+        <input type="submit" class="btn continue btn-block" value="Continue" />
     </div>
 </form>
 
@@ -26,3 +26,5 @@
 
 <br />
 <a asp-controller="Accounts" asp-action="Register">Sign Up</a>
+<br />
+<a asp-controller="Accounts" asp-action="ForgotPassword">Reset the password</a>
