--- a/XpandTest6/Views/Accounts/ResetPassword.cshtml
+++ b/XpandTest6/Views/Accounts/ResetPassword.cshtml
@@ -6,8 +6,8 @@
 <h2>@ViewData["Title"]</h2>
 <h4>Enter a password.</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+
+    <div>
         <form method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <input asp-for="Code" type="hidden" />
@@ -28,5 +28,5 @@
             </div>
             <button type="submit" class="btn btn-primary">Reset</button>
         </form>
+   
     </div>
-</div>
